# TBird.Library

./: .gitignore  CLAUDE.md  LICENSE  README.md  TBird.Library.sln  TBird.Maui.sln
.claude/: settings.local.json
Netkeiba.Core/: NetkeibaGetter.cs
TBird.Console/: CLAUDE.md  TBird.Console.csproj
TBird.Core/: CLAUDE.md  TBird.Core.csproj  TBird.Core.sln
TBird.DB/: CLAUDE.md  TBird.DB.csproj  TBird.DB.sln
TBird.DB.SQLServer/: CLAUDE.md  TBird.DB.SQLServer.csproj  TBird.DB.SQLServer.sln
TBird.DB.SQLite/: CLAUDE.md  TBird.DB.SQLite.csproj  TBird.DB.SQLite.sln
TBird.IO/: CLAUDE.md  Class1.cs  TBird.IO.csproj  TBird.IO.sln
TBird.IO.Img/: CLAUDE.md  Class1.cs  ImgUtil.cs  TBird.IO.Img.csproj  TBird.IO.Img.sln
TBird.IO.Pdf/: CLAUDE.md  GhostScriptSharp.cs  IPdfUtil.cs  PdfUtil.cs  PdfUtilExecutor.cs  PdfUtilWrapper.cs  Program.cs  TBird.IO.Pdf.csproj  TBird.IO.Pdf.sln
TBird.Maui/: CLAUDE.md  MauiMessageService.cs  TBird.Maui.csproj
TBird.Maui.Background/: BackgroundJobBase.cs  CLAUDE.md  INetworkPolicy.cs  JobPriority.cs  MauiNetworkPolicy.cs  PriorityJobQueue.cs  SiteRateLimiter.cs  TBird.Maui.Background.csproj
TBird.Maui.DB/: CLAUDE.md  IMigration.cs  SqliteDatabaseBase.cs  TBird.Maui.DB.csproj
TBird.Maui.Web/: AngleSharpHelper.cs  CLAUDE.md  HttpRequestFailureLogger.cs  TBird.Maui.Web.csproj  TransientHttpErrorHelper.cs
TBird.Plugin/: CLAUDE.md  TBird.Plugin.sln
TBird.Roslyn/: CLAUDE.md  TBird.Roslyn.csproj  (+1 more)
_Apps/ml/: README.md  db.py  evaluate.py  features.py  labels.py  ml_common.py  predict.py  pyproject.toml  test_ml.py  train.py
(+818 files in other folders)
